--- a/MediaDemo/app/src/main/res/layout/activity_system_take_apicture.xml
+++ b/MediaDemo/app/src/main/res/layout/activity_system_take_apicture.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".photo.SystemTakeAPictureActivity">
+        tools:context=".photo.CaputerActivity">
 
     <Button
             android:id="@+id/btn_open"
