--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,11 @@
             android:layout_height="wrap_content"
             android:text="View 动画"/>
     <Button
+            android:id="@+id/btn_view_java"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View 动画 JAVA"/>
+    <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="属性动画"/>
