--- a/AnimationDemo/app/src/main/res/layout/activity_view_animation.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_view_animation.xml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ViewAnimationActivity">
+        android:orientation="vertical"
+        tools:context=".ViewXmlAnimationActivity">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+        <Button
+                android:id="@+id/btn_translate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="平移"/>
+        <Button
+                android:id="@+id/btn_scale"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="缩放"/>
+        <Button
+                android:id="@+id/btn_alpha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="透明度"/>
+        <Button
+                android:id="@+id/btn_rotate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="旋转 "/>
+        <Button
+                android:id="@+id/btn_uni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="组合 "/>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/ic_launcher"/>
+
+</LinearLayout>
