--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:layout_height="wrap_content"
             android:text="逐帧动画_java"/>
     <Button
+            android:id="@+id/btn_property_animtion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="属性动画"/>
