--- a/AnimationDemo/app/src/main/res/layout/activity_frame_animation_java.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_frame_animation_java.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".FrameAnimationJavaActivity">
+        tools:context=".frameanimation.FrameAnimationJavaActivity">
 
         <Button
                 android:id="@+id/btn_start"
