--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="View 动画"/>
-    <Button
-            android:id="@+id/btn_view_java"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="View 动画 JAVA"/>
+
     <Button
         android:id="@+id/btn_animation_frame_xml"
         android:layout_width="match_parent"
@@ -37,7 +33,8 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="基于力学的动画"/>
+
+            android:text="Physics-based motion"/>
     <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
