--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,9 @@
             android:layout_height="wrap_content"
             android:text="属性动画"/>
     <Button
+            android:id="@+id/btn_moton_base"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:text="Physics-based motion"/>
     <Button
             android:layout_width="match_parent"
