--- a/AnimationDemo/app/src/main/res/layout/activity_spring.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_spring.xml
@@ -7,8 +7,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".basemotionanimtion.SpringActivity">
-        <Button android:layout_width="match_parent"
+        <Button
+                android:id="@+id/btn_simple"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="简单运用"/>
+        <Button
+                android:id="@+id/btn_stringText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="字符串分割词弹簧Demo"/>
 
 </LinearLayout>
