--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:id="@+id/btn_moton_base"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textAllCaps="false"
             android:text="Physics-based motion"/>
     <Button
             android:layout_width="match_parent"
