--- a/AnimationDemo/app/src/main/res/layout/activity_layout_animation.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_layout_animation.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".layoutanimation.LayoutAnimationActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+            android:id="@+id/btn_auto_animation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="布局自动更新动画"/>
+</LinearLayout>
