--- a/AnimationDemo/app/src/main/res/layout/activity_main.xml
+++ b/AnimationDemo/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
             android:layout_height="wrap_content"
             android:text="缩放动画"/>
     <Button
+            android:id="@+id/btn_layout_animation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="布局动画"/>
