--- a/ShareDemo/app/src/main/res/layout/activity_main.xml
+++ b/ShareDemo/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,12 @@
             android:text="原生WhatsApp分享图片"
             android:textAllCaps="false"/>
     <Button
+            android:id="@+id/btn_share_facebook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="原生FeceBook"
+            android:textAllCaps="false"/>
+    <Button
         android:id="@+id/btn_share"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +32,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="自定义分享文本"
+            android:textAllCaps="false"/>
+
+    <Button
+            android:id="@+id/btn_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="WI-FI列表"
             android:textAllCaps="false"/>
 
 </LinearLayout>
