--- a/BackGroundWorkDemo/app/src/main/res/layout/activity_main.xml
+++ b/BackGroundWorkDemo/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:onClick="goJobScheduler"
+        android:text="JobScheduler"/>
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:onClick="goWorkManage"
         android:text="Work Manager"/>
 
     <Button
