--- a/BackGroundWorkDemo/app/src/main/res/layout/activity_main.xml
+++ b/BackGroundWorkDemo/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="false"
+        android:onClick="goBroad"
+        android:text="Broadcast Receivers"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
         android:text="AlarmManager"/>
 
 </LinearLayout>
